@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

class "TaskEntry" {
        -title
        -description
        -urgencyLevel
        -expectedDuration
        -state
        -greenSpace

}



class "AddTaskEntryController" {
    - ToDoListRepository toDoListRepository
    + AddTaskEntryController(toDoListRepository)
    + createTaskEntry(taskDetails)
}

class "ToDoListRepository" {
    -entries
    + addTaskEntry(taskEntry: TaskEntry)
    + getTaskEntry(taskEntry: TaskEntry)
}

class "AddTaskEntryUI" {
}

class "Repositories" {
    + getInstance()
    + getToDoListRepository()
}

class "GreenSpaceController" {
    + getGreenSpaces()
}

class "Mapper" {
    + toDTO(greenSpaces)
    + toDomain(taskEntryDto)
}

class "GreenSpaceDTO" {
    + create(greenSpace)
}

class "TaskEntryDTO" {
    + create(title, description, urgencyLevel, expectedDuration, state, greenSpace)
}





AddTaskEntryController ..> ToDoListRepository : toDoListRepository

AddTaskEntryController ..> TaskEntry : task
TaskEntry ..> ToDoListRepository : exists in >
AddTaskEntryUI ..> AddTaskEntryController


AddTaskEntryController ..> Repositories : repositories

GreenSpaceController ..> Repositories : repositories

Mapper ..> Repositories : repositories
GreenSpaceDTO ..> Repositories : repositories
TaskEntryDTO ..> Repositories : repositories

GreenSpaceController ..> GreenSpaceDTO : greenSpaceDTO
GreenSpaceDTO ..> GreenSpaceController : greenSpaceController

Mapper ..> GreenSpaceDTO : greenSpaceDTO
GreenSpaceDTO ..> Mapper : mapper

Mapper ..> TaskEntryDTO : TaskEntryDTO
TaskEntryDTO ..> Mapper : mapper

AddTaskEntryController ..> TaskEntryDTO : TaskEntryDTO
TaskEntryDTO ..> AddTaskEntryController : AddTaskEntryController

@enduml